syntax = "proto3";

package steffen70.invoker;

option csharp_namespace = "Steffen70.Invoker";

import "google/protobuf/empty.proto";
import "common/common.proto";

message InvokeRequest {
    string script_name = 1;
    steffen70.invoker.common.DemoScriptContext context = 2;
}

service Invoker {
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc InvokeScript(InvokeRequest) returns (steffen70.invoker.common.DemoScriptResult);
}
